--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.1",
+    "@chakra-ui/react": "^2.1.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "bootstrap": "^5.1.3",
+    "framer-motion": "^6.3.6",
     "next": "12.1.5",
     "react": "18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "react-ionicons": "^4.2.0"
   },
