--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.1.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/quicksand": "^4.5.9",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.3.6",
