--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
-    "react-ionicons": "^4.2.0"
+    "react-ionicons": "^4.2.0",
+    "react-number-format": "^4.9.3"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
