--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.3.6",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -25,6 +27,7 @@
     "react-number-format": "^4.9.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "17.0.35",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
