--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/quicksand": "^4.5.9",
+    "@stripe/react-stripe-js": "^1.8.1",
+    "@stripe/stripe-js": "^1.32.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "framer-motion": "^6.3.6",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
@@ -24,7 +27,8 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-ionicons": "^4.2.0",
-    "react-number-format": "^4.9.3"
+    "react-number-format": "^4.9.3",
+    "stripe": "^9.8.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
