--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "next": "12.1.5",
+    "next-pwa": "^5.5.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
