--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
+    "firebase": "^9.8.3",
     "framer-motion": "^6.3.6",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
