--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/quicksand": "^4.5.9",
+    "@netlify/plugin-nextjs": "^4.9.1",
     "@stripe/react-stripe-js": "^1.8.1",
     "@stripe/stripe-js": "^1.32.0",
     "axios": "^0.27.2",
