--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-pwa": "^5.5.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-geolocation": "^1.0.11",
     "react-icons": "^4.4.0",
     "react-ionicons": "^4.2.0",
     "react-number-format": "^4.9.3",
