--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@netlify/plugin-nextjs": "^4.9.1",
     "@stripe/react-stripe-js": "^1.8.1",
     "@stripe/stripe-js": "^1.32.0",
+    "aos": "^2.3.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
