--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "e2e": "codeceptjs run --steps"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
@@ -40,8 +41,10 @@
     "@types/node": "17.0.35",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "codeceptjs": "^3.3.3",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.2",
+    "puppeteer": "^15.1.0",
     "typescript": "4.6.4"
   }
 }
