--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "**/*.tsx",
     "pages/api/auth/[...nextauth].js"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "e2e"]
 }
